Introduces another major code clean-up os tests and streams package