@@ -6,9 +6,12 @@ package codebase.iterators;
 import codebase.junit.CodeBlock;
 import codebase.junit.EnhancedTestCase;
 
-public class TestArrayIterator
-        extends EnhancedTestCase {
-    
+/**
+ * Tests the {@link ArrayIterator} class.
+ */
+public class TestArrayIterator extends
+        EnhancedTestCase {
+
     /**
      * Tests an array iterator over a null array.
      */
@@ -19,57 +22,57 @@ public class TestArrayIterator
             };
         }, new IllegalArgumentException());
     }
-    
+
     /**
      * Tests an array iterator over an empty array.
      */
     public final void testZero() {
         assertEquals(new EmptyIterator<Object>(), new ArrayIterator<Object>(new Object[] {}));
     }
-    
+
     /**
      * Tests an enumerator with one element.
      */
     public final void testOne() {
         final ArrayIterator<Object> oneIterator = new ArrayIterator<Object>(
-            new Object[] { new Integer(7) });
-        
-        assertEquals(oneIterator.peek(), new Integer(7));
-        assertEquals(oneIterator.next(), new Integer(7));
+                new Object[] { Integer.valueOf(7) });
+
+        assertEquals(oneIterator.peek(), Integer.valueOf(7));
+        assertEquals(oneIterator.next(), Integer.valueOf(7));
         oneIterator.reset();
-        oneIterator.update(new Integer(14));
-        assertEquals(oneIterator.next(), new Integer(14));
-        
+        oneIterator.update(Integer.valueOf(14));
+        assertEquals(oneIterator.next(), Integer.valueOf(14));
+
         assertThrows(new CodeBlock() {
             public void execute() {
                 oneIterator.peek();
             };
         }, new IllegalStateException());
     }
-    
+
     /**
-     * Tests an enumerator with one element
+     * Tests an enumerator with one element.
      */
     public final void testNormal() {
         final ArrayIterator<Object> oneIterator = new ArrayIterator<Object>(new Object[] {
-                new Integer(7), new Integer(8), new Integer(12) });
-        
-        assertEquals(oneIterator.peek(), new Integer(7));
-        assertEquals(oneIterator.next(), new Integer(7));
-        assertEquals(oneIterator.peek(), new Integer(8));
-        oneIterator.update(new Integer(14));
-        assertEquals(oneIterator.peek(), new Integer(14));
-        assertEquals(oneIterator.next(), new Integer(14));
-        assertEquals(oneIterator.next(), new Integer(12));
+                Integer.valueOf(7), Integer.valueOf(8), Integer.valueOf(12) });
+
+        assertEquals(oneIterator.peek(), Integer.valueOf(7));
+        assertEquals(oneIterator.next(), Integer.valueOf(7));
+        assertEquals(oneIterator.peek(), Integer.valueOf(8));
+        oneIterator.update(Integer.valueOf(14));
+        assertEquals(oneIterator.peek(), Integer.valueOf(14));
+        assertEquals(oneIterator.next(), Integer.valueOf(14));
+        assertEquals(oneIterator.next(), Integer.valueOf(12));
         assertThrows(new CodeBlock() {
             public void execute() {
                 oneIterator.peek();
             };
         }, new IllegalStateException());
-        
+
         oneIterator.reset();
-        assertEquals(oneIterator.next(), new Integer(7));
-        assertEquals(oneIterator.next(), new Integer(14));
-        assertEquals(oneIterator.next(), new Integer(12));
+        assertEquals(oneIterator.next(), Integer.valueOf(7));
+        assertEquals(oneIterator.next(), Integer.valueOf(14));
+        assertEquals(oneIterator.next(), Integer.valueOf(12));
     }
 }
