@@ -3,8 +3,6 @@
  */
 package codebase.junit;
 
-import codebase.junit.CodeBlock;
-import codebase.junit.EnhancedTestCase;
 import junit.framework.AssertionFailedError;
 import junit.framework.TestCase;
 
@@ -12,15 +10,15 @@ import junit.framework.TestCase;
  * Tests the {@link codebase.junit.EnhancedTestCase} class. Tests the method
  * AssertBagEquals() of the foundation test case extensions class
  */
-public class TestEnhancedTestCaseAssertBagEqualsArray
-        extends TestCase {
+public class TestEnhancedTestCaseAssertBagEqualsArray extends
+        TestCase {
 
     public void setUp() {
     }
 
     /**
-     * Tests that that {@link EnhancedTestCase#assertEquals(char, char)}
-     * behaves correctly.
+     * Tests that that {@link EnhancedTestCase#assertEquals(char, char)} behaves
+     * correctly.
      */
     public void testAssertEqualsChar() {
         EnhancedTestCase.assertEquals((char) 0, (char) 0);
@@ -28,8 +26,8 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
     }
 
     /**
-     * Tests that that {@link EnhancedTestCase#assertEquals(char, char)}
-     * identifies correctly different chars.
+     * Tests that that {@link EnhancedTestCase#assertEquals(char, char)} identifies
+     * correctly different chars.
      */
     public void testAssertNotEqualsChar() {
         try {
@@ -45,16 +43,12 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
     }
 
     public void testAssertEqualsSameIntArray() {
-        EnhancedTestCase.assertEquals(new int[] {
-                1, 2, 3}, new int[] {
-                1, 2, 3});
+        EnhancedTestCase.assertEquals(new int[] { 1, 2, 3 }, new int[] { 1, 2, 3 });
     }
 
     public void testAssertNotEqualsIntArray() {
         try {
-            EnhancedTestCase.assertEquals(new int[] {
-                    1, 2}, new int[] {
-                    1, 3, 4});
+            EnhancedTestCase.assertEquals(new int[] { 1, 2 }, new int[] { 1, 3, 4 });
         } catch (AssertionFailedError e) {
             return;
         }
@@ -66,68 +60,58 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
     }
 
     public void testAssertBagEqualsVoid() {
-        EnhancedTestCase.assertBagEquals(new Object[] {new Integer(1)},
-            new Object[] {new Integer(1)});
+        EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1) },
+                new Object[] { Integer.valueOf(1) });
     }
 
     public void testAssertBagEqualsSameList() {
-        EnhancedTestCase.assertBagEquals(new Object[] {
-                new Integer(1), new Integer(2), new Integer(3)},
-            new Object[] {
-                    new Integer(1), new Integer(2), new Integer(3)});
+        EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(3) }, new Object[] { Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(3) });
     }
 
     public void testAssertBagEqualsDouble() {
-        EnhancedTestCase.assertBagEquals(new Object[] {
-                new Integer(1), new Integer(1)}, new Object[] {
-                new Integer(1), new Integer(1)});
+        EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1), Integer.valueOf(1) },
+                new Object[] { Integer.valueOf(1), Integer.valueOf(1) });
     }
 
     public void testAssertBagEqualsDoubleSwitched() {
-        EnhancedTestCase.assertBagEquals(new Object[] {
-                new Integer(1), new Integer(2), new Integer(3),
-                new Integer(1)}, new Object[] {
-                new Integer(1), new Integer(2), new Integer(1),
-                new Integer(3)});
+        EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(3), Integer.valueOf(1) }, new Object[] { Integer.valueOf(1),
+                Integer.valueOf(2), Integer.valueOf(1), Integer.valueOf(3) });
     }
 
     public void testAssertBagEqualsDoubleSwitchedMultiple() {
-        EnhancedTestCase.assertBagEquals(new Object[] {
-                new Integer(1), new Integer(2), new Integer(3),
-                new Integer(1), new Integer(4), new Integer(5),
-                new Integer(2)}, new Object[] {
-                new Integer(1), new Integer(2), new Integer(1),
-                new Integer(3), new Integer(4), new Integer(2),
-                new Integer(5)});
+        EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(3), Integer.valueOf(1), Integer.valueOf(4), Integer.valueOf(5),
+                Integer.valueOf(2) }, new Object[] { Integer.valueOf(1), Integer.valueOf(2),
+                Integer.valueOf(1), Integer.valueOf(3), Integer.valueOf(4), Integer.valueOf(2),
+                Integer.valueOf(5) });
     }
 
     /**
-     * A regression test introduced because of a failure to check arrays
-     * correctly.
+     * A regression test introduced because of a failure to check arrays correctly.
      */
     public final void testAssertBagEqualsArrayElements() {
         final Object[] strArrays = new Object[] {
-                new Object[] {
-                        new String("a5"), new String("b5")}, new Object[] {
-                        new String("a6"), new String("b6")}};
+                new Object[] { String.valueOf("a5"), String.valueOf("b5") },
+                new Object[] { String.valueOf("a6"), String.valueOf("b6") } };
 
         // Check equal to itself
         EnhancedTestCase.assertBagEquals(strArrays, strArrays);
 
         // Check that it is equal of the an array with the inverted elements
-        EnhancedTestCase.assertBagEquals(strArrays, new Object[] {
-                new Object[] {
-                        new String("a6"), new String("b6")}, new Object[] {
-                        new String("a5"), new String("b5")}});
+        EnhancedTestCase.assertBagEquals(strArrays,
+                new Object[] { new Object[] { String.valueOf("a6"), String.valueOf("b6") },
+                        new Object[] { String.valueOf("a5"), String.valueOf("b5") } });
     }
 
     /**
-     * Compares an empty bag with a bag with one element
+     * Compares an empty bag with a bag with one element.
      */
     public void testAssertBagNotEqualsVoidVsOne() {
         try {
-            EnhancedTestCase.assertBagEquals(new Object[] {new Integer(1)},
-                new Object[] {});
+            EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1) }, new Object[] {});
         } catch (AssertionFailedError e) {
             return;
         }
@@ -136,9 +120,9 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
 
     public void testAssertBagNotEqualsMultipleVsSingle() {
         try {
-            EnhancedTestCase.assertBagEquals(new Object[] {
-                    new Integer(1), new Integer(1)},
-                new Object[] {new Integer(1)});
+            EnhancedTestCase.assertBagEquals(
+                    new Object[] { Integer.valueOf(1), Integer.valueOf(1) },
+                    new Object[] { Integer.valueOf(1) });
         } catch (AssertionFailedError e) {
             return;
         }
@@ -147,9 +131,8 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
 
     public void testAssertBagNotEqualsSingleVsMultiple() {
         try {
-            EnhancedTestCase.assertBagEquals(new Object[] {new Integer(1)},
-                new Object[] {
-                        new Integer(1), new Integer(1)});
+            EnhancedTestCase.assertBagEquals(new Object[] { Integer.valueOf(1) }, new Object[] {
+                    Integer.valueOf(1), Integer.valueOf(1) });
         } catch (AssertionFailedError e) {
             return;
         }
@@ -158,9 +141,9 @@ public class TestEnhancedTestCaseAssertBagEqualsArray
 
     public void testAssertBagNotEqualsDifferent() {
         try {
-            EnhancedTestCase.assertBagEquals(new Object[] {
-                    new Integer(1), new Integer(2)}, new Object[] {
-                    new Integer(2), new Integer(3)});
+            EnhancedTestCase.assertBagEquals(
+                    new Object[] { Integer.valueOf(1), Integer.valueOf(2) },
+                    new Object[] { Integer.valueOf(2), Integer.valueOf(3) });
         } catch (AssertionFailedError e) {
             return;
         }
